test/resources/valid/ValidAnyMixedArray.flo
action STUB_ACTION = stub();

flow MY_FLOW = {
    any myAny = ['a', false, 2];
    STUB_ACTION >> myAny;
}